--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
       }
     },
     "collectCoverageFrom": [
-      "src/*.{js,ts}"
+      "src/**/*.ts"
     ]
   },
   "prettier": {
@@ -116,5 +116,8 @@
     "tslint-config-standard": "8.0.1",
     "typedoc": "0.14.2",
     "typescript": "3.0.3"
+  },
+  "dependencies": {
+    "request-promise": "4.2.4"
   }
 }
