--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "typescript": "3.0.3"
   },
   "dependencies": {
+    "@types/request-promise": "^4.1.43",
     "request-promise": "4.2.4"
   }
 }
