--- a/package.json
+++ b/package.json
@@ -118,7 +118,9 @@
     "typescript": "3.0.3"
   },
   "dependencies": {
+    "@types/cheerio": "^0.22.11",
     "@types/request-promise": "^4.1.43",
+    "cheerio": "^1.0.0-rc.3",
     "request-promise": "4.2.4"
   }
 }
