--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "Mark Casaje <mcasaje@pm.me>",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/mcasaje/weather-app-demo"
   },
   "license": "MIT",
   "engines": {
@@ -22,28 +22,14 @@
     "lint": "tslint  --project tsconfig.json -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
     "prebuild": "rimraf dist",
     "build": "tsc --module commonjs && typedoc --out docs --target es6 --theme minimal --mode file src",
-    "start": "rollup -c rollup.config.ts -w",
     "test": "jest --coverage",
-    "test:watch": "jest --coverage --watch",
-    "test:prod": "npm run lint && npm run test -- --no-cache",
-    "deploy-docs": "ts-node tools/gh-pages-publish",
-    "report-coverage": "cat ./coverage/lcov.info | coveralls",
-    "commit": "git-cz",
-    "semantic-release": "semantic-release",
-    "semantic-release-prepare": "ts-node tools/semantic-release-prepare",
-    "precommit": "lint-staged",
-    "travis-deploy-once": "travis-deploy-once"
+    "test:prod": "npm run lint && npm run test -- --no-cache"
   },
   "lint-staged": {
     "{src,test}/**/*.ts": [
       "prettier --write",
       "git add"
     ]
-  },
-  "config": {
-    "commitizen": {
-      "path": "node_modules/cz-conventional-changelog"
-    }
   },
   "jest": {
     "transform": {
@@ -62,10 +48,10 @@
     ],
     "coverageThreshold": {
       "global": {
-        "branches": 90,
-        "functions": 95,
-        "lines": 95,
-        "statements": 95
+        "branches": 70,
+        "functions": 85,
+        "lines": 90,
+        "statements": 90
       }
     },
     "collectCoverageFrom": [
@@ -76,22 +62,9 @@
     "semi": false,
     "singleQuote": true
   },
-  "commitlint": {
-    "extends": [
-      "@commitlint/config-conventional"
-    ]
-  },
   "devDependencies": {
-    "@commitlint/cli": "7.1.2",
-    "@commitlint/config-conventional": "7.1.2",
     "@types/jest": "23.3.2",
     "@types/node": "10.11.0",
-    "colors": "1.3.2",
-    "commitizen": "^3.1.1",
-    "coveralls": "3.0.2",
-    "cross-env": "5.2.0",
-    "cz-conventional-changelog": "2.1.0",
-    "husky": "1.0.1",
     "jest": "24.0.0",
     "jest-config": "24.8.0",
     "lint-staged": "8.0.0",
@@ -100,15 +73,6 @@
     "prompt": "1.0.0",
     "replace-in-file": "3.4.2",
     "rimraf": "2.6.2",
-    "rollup": "0.67.0",
-    "rollup-plugin-commonjs": "9.1.8",
-    "rollup-plugin-json": "3.1.0",
-    "rollup-plugin-node-resolve": "3.4.0",
-    "rollup-plugin-sourcemaps": "0.4.2",
-    "rollup-plugin-typescript2": "0.21.0",
-    "semantic-release": "15.13.13",
-    "shelljs": "0.8.3",
-    "travis-deploy-once": "5.0.9",
     "ts-jest": "23.10.2",
     "ts-node": "7.0.1",
     "tslint": "5.11.0",
